<br>
Limbo v2.9.0 Alpha<br>
- Rebase with QEMU 2.9.0 and align versions<br>
- User Interface improvements and Fixes<br>  
- Fixed issue with fullscreen for SDL<br>
- Fixed notifications<br>
- Fix build under non-Windows environment (patch by paul70078 github)
- Minimum Requirements: Android OS 17<br> 
<br>

<br>
Limbo v2.4.0 Alpha<br>
- Rebase with QEMU 2.7.0<br>
- New UI with removable toolbar<br> 
- Added Host forward option<br> 
- Fixed issues with reseting values on UI<br> 
- Fixed issue with VNC panning (disabled)<br> 
- Fixed issue with sound for SDL<br> 
- Fixed issue with orientation for SDL<br> 
- Fixed issue with cpu naming<br> 
- Additional UI validation<br> 
- Minimum Requirements: Android OS 14<br> 
<br>

<br>
Limbo v2.2.3<br>
-Fixed lib loading issue for Jellybean<br> 
<br>

<br>
Limbo v2.2.2<br>
Option for Virtual FAT disk<br> 
Extra QEMU parameters<br>
Fixed issues with Removable Devices<br>
Added CPU types<br>
Several backend compatibility fixes<br>
Enabled KVM (NOT Tested)<br>
<br>

<br>
Limbo v2.2.1<br>
-Fixed lib loading issue for Jellybean<br>
<br>

<br>
Limbo v2.2<br>
-Fixed several Issues with SDL<br> 
-Enabled QMP Server for saving vm state<br>
<br>

<br>
Limbo v2.1 alpha<br>
-Added SDL interface<br>
-Misc Performance Enhancements<br>
<br>

<br>
Limbo v2.0<br>
-Rebase with Qemu 2.3.0<br>
-Hard FP support<br>
-Misc Performance Enhancements<br>
-SDL Support is not supported currently (coming soon)<br>
<br>

<br>
Limbo v0.9.9 (TBD)<br>
- Upgraded to glib 2.24<br>
- Modified env for easier targeting<br>
- Created ARMv7 build configuration<br>
- Compiled SDL for X86<br>
- Created x86 build configuration<br>
- Replaced qemu-img with hd image templates<br>
<br>

<br>
Limbo v0.9.8 (May 12, 2013)<br>
- Compatibility changes due to defects<br>
<br>

<br>
Limbo v0.9.7b (May 12, 2013)<br>
- Disabling TSC Feature (too buggy)<br>
This should fix multiple issues with the last update.<br>
<br>

<br>
Limbo v0.9.7 (May 3, 2013)<br>